# idcards_generator

./: .gitignore  README.md  pyproject.toml
data/template/: id_card.html  id_card_volunteer.html  page.html
src/: main.py
