[tool.poetry]
name = "id-card-generator"
version = "0.1.0"
description = ""
authors = ["LodrikMtl <karl-etienne.bolduc@outlook.com>"]
readme = "README.md"
packages = [{include = "id_card_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
